--- a/css/header.css
+++ b/css/header.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap");
 @media (min-width: 1000px) {
   body {
-      background: red;
+      background: none;
   }
 }
 body {
